--- a/src/styles/styes-light.css
+++ b/src/styles/styes-light.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  color: white;
+  color: black;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   text-align: center;
 }
@@ -44,10 +44,10 @@ body::-webkit-scrollbar {
 .button {
   cursor: pointer;
   transition-duration: 0.2s;
-  background-color: rgba(65, 65, 65, 0.5333333333);
+  background-color: rgba(219, 219, 219, 0.5333333333);
 }
 .button:hover {
-  background-color: rgba(78, 78, 78, 0.5333333333);
+  background-color: rgba(190, 190, 190, 0.5333333333);
 }
 
 .barButton {
@@ -75,7 +75,7 @@ body::-webkit-scrollbar {
 }
 
 .exitButton:hover {
-  background-color: rgba(58, 0, 0, 0.5333333333);
+  background-color: rgba(168, 0, 0, 0.5333333333);
 }
 
 .subSelect {
@@ -85,15 +85,15 @@ body::-webkit-scrollbar {
   padding: 6px 10px;
   border-radius: 4px;
   transition-duration: 0.2s;
-  background-color: #333333;
+  background-color: #d3d3d3;
 }
 .subSelect:hover {
-  background-color: #373737;
+  background-color: #b3b3b3;
 }
 
 .dragBar {
   position: fixed;
-  background-color: rgba(16, 16, 16, 0.3333333333);
+  background-color: rgba(90, 90, 90, 0.3333333333);
   width: 100%;
   height: 38px;
   z-index: 100;
@@ -105,6 +105,4 @@ body::-webkit-scrollbar {
 
 h1 {
   font-size: 124px;
-}
-
-/*# sourceMappingURL=styles-dark.css.map *//*# sourceMappingURL=styles-dark.css.map */
+}/*# sourceMappingURL=styes-light.css.map */
